--- a/modules/gradebook/gradebook-api/build.gradle
+++ b/modules/gradebook/gradebook-api/build.gradle
@@ -9,6 +9,6 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 	compileOnly group: "javax.portlet", name: "portlet-api"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api"
-	compileOnly project(":modules:gradebook:gradebook-api")
+	//compileOnly project(":modules:gradebook:gradebook-api")
 
 }
