--- a/modules/gradebook/gradebook-service/build.gradle
+++ b/modules/gradebook/gradebook-service/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 	compileOnly project(":modules:gradebook:gradebook-api")
 	compileOnly group: "javax.portlet", name: "portlet-api"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api"
+	compileOnly group: "com.liferay", name: "com.liferay.asset.display.page.api"
 }
 
 buildService {
